# stdcli

./: Cargo.toml  README.md
examples/: useit.rs
src/: lib.rs  prelude.rs  term.rs
